--- a/oridamid/59/Html e Css do projeto 1/animais-fantasticos/css/style.css
+++ b/oridamid/59/Html e Css do projeto 1/animais-fantasticos/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 body, h1, h2, ul, li, p, dd, dt, dl
 {
   margin: 0px;
@@ -11,6 +13,8 @@ body, h1, h2, ul, li, p, dd, dt, dl
 /* ALTURA DA VIEWPORT -> vh = 1/100 = ex: 900px, 1vh = 9px */
 /* LARGURA DA VIEWPORT -> vw = 1/100 = ex: 750px, 1vw = 7.5px */
 
+
+
 /* faz com que as imagem nao ultrapassem o container e fiquem responsivas */
 img
 {
@@ -18,10 +22,12 @@ img
   max-width: 100%;
 }
 
+
 ul
 {
   list-style: none;
 }
+
 
 body
 {
@@ -32,6 +38,7 @@ body
   grid-template-columns: 1fr 120px minmax(300px, 800px) 1fr;
 }
 
+
 .menu
 {
   grid-column: 3 / 5;  /* pegar  a coluna da linha 3 até a linha 5*/
@@ -40,12 +47,14 @@ body
   background: #fb5;
 }
 
+
 .menu ul
 {
   display: flex;
   flex-wrap: wrap;
   padding: 10px;
 }
+
 
 .menu li a
 {
@@ -61,6 +70,7 @@ body
   letter-spacing: .1em;
 }
 
+
 .grid-section
 {
   grid-column: 2 / 4;
@@ -71,4 +81,208 @@ body
   grid-template-columns: 90px 300px 1fr;
   grid-gap: 20px;
   margin-bottom: 4rem;
+}
+
+
+.titulo
+{
+  font-family: 'Playfair Display SC', georgia;
+  font-size: 6em;
+  line-height: 1;
+  font-weight: 400;
+  margin-bottom: 1em;
+  grid-column: 1 / 4;
+}
+
+
+.animais h2
+{
+  font-family: monospace;
+  font-size: 1.4em;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  margin-bottom: 1em;
+  color: #E54;
+}
+
+
+/* barra ao lado do h2 */
+.animais h2::before
+{
+  content: '';
+  display: inline-block;
+  width: 40px;
+  height: 10px;
+  margin-right: 10px;
+  background: #fb5;
+}
+
+
+.animais p
+{
+  font-family: Helvetica, Arial;
+  line-height: 1.2;
+  margin-bottom: 1em;
+}
+
+
+.animais-lista
+{
+  height: 370px;
+  overflow-y: scroll;
+  grid-column: 2;
+}
+
+
+.animais-lista::-webkit-scrollbar
+{
+  width: 18px;
+}
+
+
+.animais-lista::-webkit-scrollbar-thumb
+{
+  background: #fb5;
+  border-left: 4px solid #faf6ed;
+  border-right: 4px solid #faf6ed;
+}
+
+
+.animais-lista::-webkit-scrollbar-track
+{
+  background: #faf6ed;
+}
+
+
+.animais-descricao
+{
+  grid-column: 3;
+}
+
+
+.animais-descricao section
+{
+  margin-bottom: 3rem;
+}
+
+
+.faq-lista
+{
+  grid-column: 2 / 4;
+}
+
+
+.faq-lista dt
+{
+  font-family: monospace;
+  font-weight: bold;
+  margin-top: 2rem;
+  margin-bottom: .5rem;
+  color: #E54;
+}
+
+
+.faq-lista dt::before
+{
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 10px;
+  margin-right:10px;
+  background: #fb5;
+}
+
+
+.faq-lista dd
+{
+  font-family: Helvetica, Arial;
+  margin-bottom: .5rem;
+  margin-left: 30px;
+}
+
+
+.mapa
+{
+  grid-column: 2;
+}
+
+
+.dados
+{
+  grid-column: 3;
+}
+
+
+.dados li
+{
+  margin-bottom: 1rem;
+  font-family: Helvetica, Arial;
+}
+
+
+.dados li::before
+{
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 10px;
+  margin-right:10px;
+  background: #fb5;
+}
+
+
+.copy
+{
+  grid-column: 3 / 5;
+  margin-bottom: 2rem;
+  background: #fb5;
+}
+
+
+.copy p
+{
+  padding: 20px;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+
+
+/* para responsividade */
+@media (max-width: 700px)
+{
+  body
+  {
+    grid-template-columns: 1fr;
+  }
+  .menu, .grid-section, .copy
+  {
+    grid-column: 1;
+  }
+  .grid-section
+  {
+    grid-template-columns: 100px 1fr;
+    grid-gap: 10px;
+  }
+  .animais-lista
+  {
+    grid-column: 1;
+  }
+  .faq-lista, .dados, .mapa
+  {
+    grid-column: 1 / 3;
+  }
+  .grid-section h1
+  {
+    font-size: 2.5rem;
+  }
+  .menu
+  {
+    margin-top: 0px;
+  }
+  .copy 
+  {
+    margin-bottom: 0px;
+  }
 }
